# kbase-integration-tests

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: design.md  philosophy.md  using-poetry.md
tests/: TestBase.py
tests/kbase_ui/: KBaseUIBase.py  expected_conditions.py
tests/kbase_ui/auth/: AuthBase.py  test_account-manager-account.py  test_account-manager-linked-accounts.py  test_account-manager-sign-ins.py  test_account-manager-use-agreements.py  test_login.py  test_signedout.py
tests/kbase_ui/core/: CoreBase.py  test_about.py  test_default.py  test_feeds.py  test_user-profile.py
tests/kbase_ui/plugins/: PluginBase.py  test_account.py  test_auth.py  test_auth2-client-account.py  test_auth2-client.py  test_biochem-search.py  test_catalog.py  test_dashboard4.py  test_feeds.py  test_jgi-search.py  test_jobbrowser.py  test_ontology.py  test_organizations.py  test_public-search.py  test_samples.py  test_search.py  test_taxonomy.py  test_typeview.py  test_user-profile.py
tests/kbase_ui/plugins/auth2_client/: Auth2ClientBase.py  test_account-manager-account.py  test_account-manager-linked-accounts.py  test_account-manager-sign-ins.py  test_account-manager-use-agreements.py  test_login.py  test_signedout.py
tests/kbase_ui/plugins/dataview/: DataviewBase.py  test_assembly.py  test_contig_set.py  test_expression_matrix.py  test_fba_model.py  test_feature_set.py  (+15 more)
tools/: hostname-ip.py
tools/compare-type-versions/: parse-type.py
tools/compare-type-versions/data/: Genome-17.0.txt
tools/dom-safe/: README.md  check-js.py
