[tool.poetry]
name = "tests"
version = "0.0.1"
description = "KBase Integraton Tests"
authors = ["KBase Developers"]
license = "SEE LICENSE IN LICENSE"


[tool.poetry.dependencies]
python = "~3.10.0"
selenium = "4.2.0"
webdriver-manager = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
# mypy = "0.941"
# coveralls = "3.3.1"
# flake8 = "4.0.1"
# semver = "2.13.0"
# coverage-lcov = "0.2.1"
# coverage = "5.5"poe
# toml = "0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
