[tool.poetry]
name = "tests"
version = "0.0.1"
description = "KBase Integraton Tests"
authors = ["KBase Developers"]
license = "SEE LICENSE IN LICENSE"


[tool.poetry.dependencies]
python = "~3.12.0"
selenium = "4.18.1"

[tool.poetry.dev-dependencies]
pytest = "8.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
